Updated '_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
@@ -87,7 +87,7 @@ O EDI - Eletronic Data Interchange, é um canal de captura e processamento de tr
 * Estas transações são enviadas aos sistemas da Cielo, que realizará o processamento de segunda-feira a sábado e envio destas transações às respectivas bandeiras de cartão, para autorização ou cancelamento das mesmas.
 * A Cielo retorna o arquivo ao cliente em até 2 dias, com o resultado do processamento de todas as transações (aprovadas ou negadas com seus motivos).
 
-# Considerações Gerais
+## Considerações Gerais
 
 * O arquivo de retorno estará disponível para o Estabelecimento em até 48 horas, utilizando o mesmo layout.
 * O arquivo de Remessa de Vendas ou Cancelamento submetido até 12:00h será retornado em D+1. Arquivos submetidos após 12:00 h, serão considerados como movimento do dia posterior e seu retorno será em D+2.
@@ -120,11 +120,13 @@ Cada venda é registrada em um comprovante de venda.
 * Deve ser submetido header, detalhe e trailler para cada maquineta e para cada resumo de operação (RO)
 * O arquivo deve ser formatado com 1 único lote (RO) de vendas parceladas por maquineta e 1 lote de venda (RO) à vista por maquineta.
 
-# Arquivos para Remessa e/ou Retorno de Vendas
+# Arquivos
+
+## Arquivos para Remessa e/ou Retorno de Vendas
 
 Layout de Arquivos para Remessa e/ou Retorno de Vendas
 
-## Registro Header
+### Registro Header
 
 | SEQ | DESCRIÇÃO                             | POS | TAM | FOR | COMENTÁRIOS                                                     | Consistências EDI                                                                   |
 |-----|---------------------------------------|-----|-----|-----|-----------------------------------------------------------------|-------------------------------------------------------------------------------------|
@@ -140,7 +142,7 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 | 010 | Indicação de estabelecimento especial | 46  | 01  | X   | Constante = brancos                                             | Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.  |
 | 011 | Não utilizar                          | 47  | 204 | X   | Constante = brancos                                             | não lido                                                                            |
 
-### Legenda
+#### Legenda
 
 * **POS** = Posição inicial do Campo no Arquivo;
 * **TAM** = Tamanho do Campo
@@ -148,7 +150,7 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 
 > **N** = Numérico / **X** = Alfanumérico
 
-## Registro Detalhe
+### Registro Detalhe
 
 |SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
 |---|---------|---|---|---|-----------|-----------------|
@@ -180,7 +182,7 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 |026|Vencto Novo|245|04|N|Na remessa preencher com brancos. No retorno, caso tenha convênio “renova fácil” virá a data do vencto. Cartão novo|Sem verificações|
 |027|Não utilizar|249|02|X|Constante = brancos|Não lido|
 
-## Registro Trailler
+### Registro Trailler
 
 | SEQ | DESCRIÇÃO                | POS | TAM | FOR | COMENTÁRIOS                                                                                             | Consistências EDI                                                                            |
 |-----|--------------------------|-----|-----|-----|---------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|
@@ -194,20 +196,7 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 
 <aside class="notice">( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.</aside>
 
-# Demais regras sobre cancelamento de vendas
-
-O cancelamento de qualquer transação só será aceito se houver saldo disponível na Agenda Financeira do Estabelecimento Comercial para cobrir o valor do cancelamento solicitado.
-
-* O cancelamento pode ser solicitado até 365 dias da data de autorização.
-* Para cancelamentos de vendas, os campos 004, 005, 006, 007 e 008 da linha de Detalhe devem ser preenchidos com as mesmas informações da venda, respeitando o horário e data de Autorização e Captura do Brasil.
-* É permitido o cancelamento Total ou Parcial da venda.
-* Cancelamentos parciais podem ser enviados até o valor total da transação, obedecendo as seguintes condições:
-
-> **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes / **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
-
-* Cancelamentos de transações autorizadas por meio do canal EDI, só podem ser solicitados após o recebimento do arquivo retorno da transação de autorização (até 48 horas após o envio do arquivo).
-
-# Arquivos de Remessa e Retorno de Cancelamentos
+## Arquivos de Remessa e Retorno de Cancelamentos
 
 Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado para cancelamentos de transações por meio do canal EDI, por exemplo: transações recorrentes.
 
@@ -219,7 +208,7 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 * Valor
 * Autorização da transação original;
 
-## Registro Header
+### Registro Header
 
 | SEQ | DESCRIÇÃO                             | POS | TAM | FOR | COMENTÁRIOS                                                                                                                 | Consistências EDI                                                                   |
 |-----|---------------------------------------|-----|-----|-----|-----------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------|
@@ -235,7 +224,7 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 | 010 | Indicação de estabelecimento especial | 46  | 01  | X   | Constante = brancos                                                                                                         | Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.  |
 | 011 | Não utilizar                          | 47  | 204 | X   | Constante = brancos                                                                                                         | Não lido                                                                            |
 
-## Registro Detalhe
+### Registro Detalhe
 
 |SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
 |---|---------|---|---|---|-----------|-----------------|
@@ -267,7 +256,7 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 |026|Vencto Novo|245|04|N|Na remessa preencher com brancos. No retorno, caso tenha convênio “renova fácil” virá a data do vencto. do cartão novo.|Sem verificações|
 |027|Não utilizar|249|02|X|Constante = brancos|Não lido|
 
-## Registro Trailler
+### Registro Trailler
 
 | SEQ | DESCRIÇÃO                | POS | TAM | FOR | COMENTÁRIOS                                                                                             | Consistências EDI                                                                            |
 |-----|--------------------------|-----|-----|-----|---------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|
@@ -280,6 +269,19 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 | 007 | Não utilizar             | 63  | 188 | X   | Constante = brancos                                                                                     | Não lido                                                                                     |
 
 <aside class="notice">( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.</aside>
+
+# Regras - cancelamento de vendas
+
+O cancelamento de qualquer transação só será aceito se houver saldo disponível na Agenda Financeira do Estabelecimento Comercial para cobrir o valor do cancelamento solicitado.
+
+* O cancelamento pode ser solicitado até 365 dias da data de autorização.
+* Para cancelamentos de vendas, os campos 004, 005, 006, 007 e 008 da linha de Detalhe devem ser preenchidos com as mesmas informações da venda, respeitando o horário e data de Autorização e Captura do Brasil.
+* É permitido o cancelamento Total ou Parcial da venda.
+* Cancelamentos parciais podem ser enviados até o valor total da transação, obedecendo as seguintes condições:
+
+> **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes / **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
+
+* Cancelamentos de transações autorizadas por meio do canal EDI, só podem ser solicitados após o recebimento do arquivo retorno da transação de autorização (até 48 horas após o envio do arquivo).
 
 # Anexos
 
