--- a/_i18n/pt/_posts/braspag/2003-03-03-split.md
+++ b/_i18n/pt/_posts/braspag/2003-03-03-split.md
@@ -7,7 +7,7 @@ toc_footers: true
 categories: manual
 sort_order: 3
 tags:
-  - API e-Commerce Cielo
+  - Documentos Braspag
 language_tabs:
   json: JSON
   shell: cURL
