Updated '_i18n/pt/_posts/braspag/2003-03-03-split.md' via CloudCannon

--- a/_i18n/pt/_posts/braspag/2003-03-03-split.md
+++ b/_i18n/pt/_posts/braspag/2003-03-03-split.md
@@ -139,7 +139,7 @@ Porém, para indentificar que a transação enviada se trata de uma transação 
 
 Exemplo:
 
-```
+```json
 {
    "MerchantOrderId":"2014111703",
    "Customer":{
@@ -171,7 +171,7 @@ Transação no valor de **R$100,00** sem o nó contendo as regras de divisão.
 
 **Taxa Braspag**: 2% MDR + R$0,30 Tarifa Fixa.
 
-```
+```json
 {
    "MerchantOrderId":"2014111703",
    "Customer":{
@@ -206,7 +206,7 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 **Taxa Marketplace com o Subordinado 01**: 5% MDR, já embutindo os 2% do MDR Braspag + 0,30 Tarifa Fixa.  
 **Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa.  
 
-```
+```json
 {
    "MerchantOrderId":"2014111703",
    "Customer":{
@@ -269,7 +269,7 @@ O Split de Pagamentos possui dois modelos básicos de integração:
 <BR>
 Este modelo exige que o **Marketplace** envie um "nó" adicional na integração da API Cielo E-Commerce, como apresentado em exemplos anteriores, informando as regras de divisão da transação.
 
-```
+```json
 "SplitPayments":[
     {
         "SubordinateMerchantId" :"MID Subordinate 01",
@@ -291,7 +291,7 @@ Este modelo exige que o **Marketplace** envie um "nó" adicional na integração
 
 Como resposta, A API Cielo E-Commerce retornará na resposta um nó contento as regras de divisão enviadas e os valores a serem recebidos pelo **Marketplace** e seus **Subordinados**:
 
-```
+```json
 "SplitPayments": [
     {
         "SubordinateMerchantId": "MID Subordinate 01",
@@ -329,7 +329,7 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 
 `REQUEST`
 
-```
+```json
 {
    "MerchantOrderId":"2014111703",
    "Customer":{
@@ -372,7 +372,7 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 
 `RESPONSE`
 
-```
+```json
 {
     "MerchantOrderId": "2014111706",
     "Customer": {
@@ -495,7 +495,7 @@ Para obter um token de acesso:
 
 `REQUEST`  
 
-```
+```json
 POST https://{OAUTH2 Server}/oauth2/token  
 --header "Authorization: Basic {base64}"  
 --header "Content-Type: application/x-www-form-urlencoded"  
@@ -504,7 +504,7 @@ grant_type=client_credentials
 
 `RESPONSE`
 
-```
+```json
 {
     "access_token": "eyJ0eXAiOiJKV1QiLCJhbG.....WE1igNAQRuHAs",
     "token_type": "bearer",
@@ -520,12 +520,12 @@ Com o token de acesso, é possível realizar um requisição à API do Split par
 
 `REQUEST`  
 
-```
+```json
 PUT https://{API Split}/api/transactions/{PaymentId}/split
 --header "Authorization: Bearer {token}"
 ```
 
-```
+```json
 [
     {
         "SubordinateMerchantId" :"0f377932-5668-4c72-8b5b-2b43760ebd38",
@@ -548,7 +548,7 @@ PUT https://{API Split}/api/transactions/{PaymentId}/split
 
 RESPONSE
 
-```
+```json
 [
     {
         "SubordinateMerchantId" :"0f377932-5668-4c72-8b5b-2b43760ebd38",
@@ -605,13 +605,13 @@ Para consultar uma transação, utilize o próprio serviço de consulta da API C
 
 `REQUEST`
 
-```
+```json
 GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
 ```
 
 `RESPONSE`
 
-```
+```json
 {
     "MerchantOrderId": "2014111706",
     "Customer": {
@@ -708,7 +708,7 @@ Na captura total de uma transação, o somatório dos valores de participação 
 
 `REQUEST`
 
-```
+```json
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
 {
     "SplitPayments":[
@@ -734,7 +734,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
 
 `RESPONSE`
 
-```
+```json
 {
     "Status": 2,
     "ReturnCode": "6",
@@ -804,7 +804,7 @@ Na captura parcial de uma transação, o somatório dos valores de participaçã
 
 `REQUEST`
 
-```
+```json
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
 {
     "SplitPayments":[
@@ -830,7 +830,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
 
 `RESPONSE`
 
-```
+```json
 {
     "Status": 2,
     "ReturnCode": "6",
@@ -911,7 +911,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void
 
 `RESPONSE`
 
-```
+```json
 {
     "Status": 10,
     "ReturnCode": "9",
@@ -945,7 +945,7 @@ Os valores cancelados serão sensibilizados nas respectivas agendas dos **Subord
 
 `REQUEST`
 
-```
+```json
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void?amount=2000
 {
     "VoidSplitPayments":[
@@ -963,7 +963,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void?amount=2000
 
 `RESPONSE`
 
-```
+```json
 {
     "Status": 2,
     "ReasonCode": 0,
