Updated '_i18n/pt/_posts/braspag/2003-03-03-split.md' via CloudCannon

--- a/_i18n/pt/_posts/braspag/2003-03-03-split.md
+++ b/_i18n/pt/_posts/braspag/2003-03-03-split.md
@@ -1,6 +1,6 @@
 ---
 layout: manual
-title: Split de pagamentos
+title: Split de Pagamentos
 description: Manual integração técnica via API Split
 search: true
 toc_footers: true
