--- a/_i18n/pt/_posts/artigos/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/artigos/2015-08-25-artigos.md
@@ -6,7 +6,7 @@ search: true
 toc_footers: true
 categories: tutorial
 tags:
-  - Artigos e Conteúdo
+  - Documentos Adicionais
 ---
 
 # Boas Práticas eCommerce
