Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial
-title:  Boas Práticas eCommerce
+title:  Artigos e informações
 description:
 search: true
 toc_footers: true
