Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
@@ -120,3 +120,22 @@ if (cardIsValid($customerCardNumber)) {
   // o cartão é válido e podemos dar andamento na integração
 }
 ```
+
+
+# Como usar Azure Kubernetes Services
+
+## Sobre o Autor:
+
+|Tiago Rosendo| Desenvolvedor na Braspag, backend de coração e apaixonado pelo frontend, entusiasta de JS e Docker e nas horas vagas não dispensa uma jogatina online.|
+||**LinkedIn:** https://www.linkedin.com/in/trosendo / **E-mail:** trosendo@braspag.com.br|
+
+## Introdução
+
+Vamos falar um pouco sobre o Azure Kubernetes Services, vulgo AKS.
+O utilizamos para realizar deploys em nossas principais aplicações, desde as mais básicas as mais complexas tudo com alta disponibilidade!
+
+Rodar containers Docker em um computador local é muito simples, basta um comando `docker run nginx` e pronto, você tem seu container lindo rodando, porém quando você tem a necessidade de rodar esse mesmo container em um ambiente de nuvem a história muda... 
+Você tem que montar seu cluster, configurar o auto-scale, configurar o load balance... MEU DEUS QUANTA COISA!
+Um certo dia, parei para pesquisar uma solução que poupasse meu tempo, logo, pensei comigo: 
+
+> "não é possível que ninguém tenha feito algo para simplificar esse processo repetitivo"
