Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
@@ -138,3 +138,30 @@ Você tem que montar seu cluster, configurar o auto-scale, configurar o load bal
 Um certo dia, parei para pesquisar uma solução que poupasse meu tempo, logo, pensei comigo: 
 
 > "não é possível que ninguém tenha feito algo para simplificar esse processo repetitivo"
+
+Uma das soluções encontradas foi o **Azure Kubernetes Services**, ele te permite montar um cluster de Kubernetes com 1 único comando, com isso sobra tempo pra focar na sua aplicação e não na configuração de máquinas
+<br>
+**Mas o que é Kubernetes?** Falando por alto, Kubernetes é uma ferramenta de orquestração para containers, você monta seu container com o Docker e o Kubernetes faz todo o trabalho de deploy, auto scale, service discovery e muito mais. 
+Caso queira saber mais sobre o Kubernetes segue o link da documentação deles: 
+
+> https://kubernetes.io/docs/tutorials/kubernetes-basics/
+
+## Montando um Cluster em Kubernetes
+ 
+Estou levando em consideração que você já tenha o `Azure CLI` configurado na sua máquina, caso não tenha segue um tutorial de configuração: 
+
+> https://docs.microsoft.com/en-us/cli/azure/install-azure-cli?view=azure-cli-latest
+
+Para montar um cluster utilizando o AKS basta um único comando: 
+
+```
+"az aks create -n NomeDoSeuCluster -g NomeDoGrupoDeRecursos --generate-ssh-keys"
+``` 
+
+Substitua o `NomeDoSeuCluster` pelo nome do seu cluster.
+
+Substitua o `NomeDoGrupoDeRecursos` pelo nome do grupo de recursos onde o seu cluster irá ser provisionado, este grupo de recursos precisa existir na sua conta do Azure.
+
+Após alguns minutos você terá o seu cluster montado como pode ser visto na imagem abaixo:
+
+![](https://i.imgur.com/CFwO4Jz.png)
