Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
@@ -125,7 +125,7 @@ if (cardIsValid($customerCardNumber)) {
 
 ## Sobre o Autor:
 
-|Tiago Rosendo| Desenvolvedor na Braspag e Cielo, backend de coração e apaixonado pelo frontend, entusiasta de JS e Docker e nas horas vagas não dispensa uma jogatina online.|
+|**Tiago Rosendo**| Desenvolvedor na Braspag e Cielo, backend de coração e apaixonado pelo frontend, entusiasta de JS e Docker e nas horas vagas não dispensa uma jogatina online.|
 ||**LinkedIn:** https://www.linkedin.com/in/trosendo / **E-mail:** trosendo@braspag.com.br|
 
 ## Introdução
