Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md
@@ -165,3 +165,82 @@ Substitua o `NomeDoGrupoDeRecursos` pelo nome do grupo de recursos onde o seu cl
 Após alguns minutos você terá o seu cluster montado como pode ser visto na imagem abaixo:
 
 ![](https://i.imgur.com/CFwO4Jz.png)
+
+Após montar nosso cluster vamos resgaras as credenciais de acesso com o comando:
+
+```
+"az aks get-credentials -n NomeDoSeuCluster -g NomeDoGrupoDeRecursos"
+```
+
+Caso tudo dê certo você irá receber a seguinte mensagem:
+
+![](https://i.imgur.com/oLSo4j4.png)
+
+Vamos agora configurar o Kubectl CLI, este será utilizado para se comunicar diretamente com o Kubernetes, para fazer isso basta executar o seguinte comando:
+ 
+```
+"az aks install-cli"
+```
+
+Se tudo ocorreu bem será exibido a seguinte mensagem:
+
+![](https://i.imgur.com/pihYQw1.png)
+
+Vamos verificar agora qual o estado das máquinas do nosso cluster, para isso utilizaremos o comando:
+
+```
+"kubectl get nodes"
+```
+
+![](https://i.imgur.com/Qyygi8y.png)
+
+Finalmente vamos subir nossa primeira aplicação dentro do nosso cluster!!! Para isso vamos utilizar o comando `run`:
+
+```
+"kubectl run meu-nginx --image=nginx --replicas=1 --port=80"
+```
+
+![](https://i.imgur.com/gGNYlk2.png)
+
+Vamos chamar o `get pods` para verificar se nossa aplicação foi deployada com sucesso:
+
+![](https://i.imgur.com/IxKDQJ8.png)
+ 
+Como vimos na imagem acima nossa aplicação foi "deployada", porém ela ainda não está disponivel na internet
+Para disponibilizar nossa aplicação na internet vamos utilizar o comando `expose`:
+
+```
+"kubectl expose deployment meu-nginx --port=80 --type=LoadBalancer"
+```
+
+![](https://i.imgur.com/JVJH82V.png)
+
+Agora basta chamar o comando `get services` para descobrir qual o IP que nossa aplicação recebeu, essa etapa pode demorar alguns minutos:
+
+```
+"kubectl get services --watch"
+```
+
+![](https://i.imgur.com/DaKu0HU.png)
+ 
+Como podemos ver nossa aplicação recebeu o IP: 52.179.85.102
+Por fim, vamos acessar o IP da nossa aplicação para ver se deu tudo certo!
+
+![](https://i.imgur.com/5Uvpr0e.png)
+
+E não é que funciona mesmo? 😊
+
+## Conclusão:
+
+Por hoje é isso galera, espero que tenham gostado, essa foi uma pequena demonstração de como o AKS/Kubernetes pode nos ajudar na orquestração de nossos containers,pretendo fazer uma parte 2 deste artigo explicando sobre como utilizar o Azure Container Instance junto com o Kubernetes, deixo logo abaixo alguns links interessantes para quem quer se aprofundar no assunto:
+
+## Bibliografia:
+
+* Introducing AKS (managed Kubernetes) and Azure Container Registry improvements
+ * https://azure.microsoft.com/en-us/blog/introducing-azure-container-service-aks-managed-kubernetes-and-azure-container-registry-geo-replication/
+ 
+* Kubernetes.io
+ * https://kubernetes.io/docs/tutorials/kubernetes-basics/ 
+ 
+* Explore Multicloud Deployments with Microsoft’s ACI Connector for Kubernetes
+ * https://thenewstack.io/explore-multicloud-deployments-aci-connector-kubernetes/
