Updated '_i18n/pt/_posts/2017-08-12-testes.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-testes.md
+++ b/_i18n/pt/_posts/2017-08-12-testes.md
@@ -13,7 +13,7 @@ language_tabs:
 
 # Introduction to Pagador API
 
-The purpose of this documentation is to guide the developer about how to integrate with the Pagador API, the Braspag's payment gateway, describing the services available with sample requests and responses.
+**The** purpose of this documentation is to guide the developer about how to integrate with the Pagador API, the Braspag's payment gateway, describing the services available with sample requests and responses.
 
 All operations require specific credentials (Merchant ID and Merchant Key) to access each environment: ** Sandbox **, ** Test** and ** Production **. To perform an operation, combine the base endpoint of the environment with the endpoint of the desired operation and send the correct HTTP VERB as described in the operation.
 
