Updated '_i18n/pt/_posts/2017-08-12-testes.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-testes.md
+++ b/_i18n/pt/_posts/2017-08-12-testes.md
@@ -4016,7 +4016,7 @@ curl
 |`DebitCard.CardNumber`|Text|16|Yes|Credit Card number|
 |`DebitCard.Holder`|Text|25|Yes|Cardholder name|
 |`DebitCard.ExpirationDate`|Text|7|Yes|Expiration Date (MM/YYYY)|
-|`DebitCard.SecurityCode`|Text|4|Yes|Security Code (CVV2)|
+|`DebitCard.SecurityCode`|Text|4|Yes|Security Code (**CVV2**)|
 |`DebitCard.Brand`|Text|10|Yes|Card's Brand|
 
 ### Response
