Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1,7 +1,7 @@
 ---
 layout: manual
 title: Manual de integração
-description: Integração técnica via API
+description: Integração Técnica via API
 search: true
 translated: true
 categories: manual
