Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -1,10 +1,10 @@
 ---
-layout: tutorial
+layout: manual
 title: Teste
 description: Manual integração técnica via API Split
 search: true
 toc_footers: false
-categories: tutorial
+categories: manual
 sort_order: 3
 tags:
   - Split de Pagamentos
