Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -1,11 +1,11 @@
 ---
-layout: manual
-title: Teste
+layout: tutorial
+title:  Tutoriais
 description: Manual integração técnica via API Split
 search: true
 toc_footers: false
-categories: manual
-sort_order: 3
+categories: tutorial
+sort_order: 4
 tags:
   - Split de Pagamentos
 language_tabs:
@@ -185,7 +185,7 @@ Porém, para indentificar que a transação enviada se trata de uma transação 
 
 Exemplo:
 
-### Request
+#### Request
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">{api-cielo-ecommerce}/1/sales/</span></aside>
 
@@ -212,7 +212,7 @@ Exemplo:
 }
 ```
 
-### Response 
+#### Response 
 
 ```json
 {
