--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial
-title:  Tutoriais
+title:  Tutoriais00
 description: Manual integração técnica via API Split
 search: true
 toc_footers: false
