Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -183,7 +183,7 @@ Porém, para indentificar que a transação enviada se trata de uma transação 
 
 Exemplo:
 
-#### Request
+** Request **
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">{api-cielo-ecommerce}/1/sales/</span></aside>
 
@@ -210,7 +210,7 @@ Exemplo:
 }
 ```
 
-#### Response 
+** Response ** 
 
 ```json
 {
