Alteração de tabela
A tabela com alternativas para recursos removidos, na seção 'Desenvolva seu aplicativo para Cielo LIO', foi refeita em HTML para permitir a personalização do alinhamento e do tamanho das células.

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -262,12 +262,37 @@ A Cielo removeu alguns recursos da Plataforma Cielo LIO visando garantir a segur
 
 Portanto, abaixo disponibilizamos algumas alternativas que podem a vir substituir a ausência desses recursos.
 
-| Push-Notifications                                                                                                                                                                                                                                                                                                                                                                                                                                    | Serviços de Localização (GPS)                                                                                                                                                                                                                                                                                                                       | Serviços de Mapas                                                                                                                                                                                       |
-|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.                                                                                                                                                                                                                                                                                                                                                                        | Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.                                                                                                                                                                                                                                                                      | Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.                                                                                                                          |
-| **Alternativa**: JobScheduler                                                                                                                                                                                                                                                                                                                                                                                                                         | **Alternativa**: Location Manager                                                                                                                                                                                                                                                                                                                   | **Alternativa**: MapBox                                                                                                                                                                                 |
-| **Descrição**: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend. O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando). | **Descrição**: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica. | **Descrição**: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web. |
-| **Referência**: [Clique aqui](https://developer.android.com/reference/android/app/job/JobScheduler.html)                                                                                                                                                                                                                                                                                                                                              | **Referência**: [Clique aqui](https://developer.android.com/reference/android/location/LocationManager.html)                                                                                                                                                                                                                                        | **Referência**: [Clique aqui](https://www.mapbox.com)                                                                                                                                                   |
+<table>
+  <thead>
+    <tr>
+      <th style="width:33%;">Push-Notifications</th>
+      <th style="width:33%;">Serviços de Localização (GPS)</th>
+      <th style="width:33%;">Serviços de Mapas</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
+      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
+      <td>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</td>
+    </tr>
+    <tr>
+      <td><strong>Alternativa</strong>: JobScheduler</td>
+      <td><strong>Alternativa</strong>: Location Manager</td>
+      <td><strong>Alternativa</strong>: MapBox</td>
+    </tr>
+    <tr style="vertical-align:top;">
+      <td><strong>Descrição</strong>: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend. O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).</td>
+      <td><strong>Descrição</strong>: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.</td>
+      <td><strong>Descrição</strong>: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.</td>
+    </tr>
+    <tr>
+      <td><strong>Referência</strong>: <a href="https://developer.android.com/reference/android/app/job/JobScheduler.html">Clique aqui</a></td>
+      <td><strong>Referência</strong>: <a href="https://developer.android.com/reference/android/location/LocationManager.html">Clique aqui</a></td>
+      <td><strong>Referência</strong>: <a href="https://www.mapbox.com">Clique aqui</a></td>
+    </tr>
+  </tbody>
+</table>
 
 Agora que você já tem as informações necessárias para desenvolver um aplicativo para, acesse a documentação da Integração Local para saber como se integrar com o SDK da Cielo LIO.
 
